--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,5 @@
 --- 
-import Navbar from '@/components/Navbar/index.astro'
+import { ViewTransitions } from 'astro:transitions'
 import Footer from '@/components/Footer/index.astro'
 
 interface Props {
@@ -10,27 +10,18 @@ const { title } = Astro.props
 ---
 
 <!DOCTYPE html>
-<html lang="en" class="scroll-smooth text-base md:text-10px lg:text-12px xl:text-12px 2xl:text-sm">
+<html lang="zh-Hans" class="scroll-smooth text-sm md:text-sm lg:text-base">
 <head>
   <meta charset="UTF-8" />
-  <meta name="description" content="Astro description">
   <meta name="viewport" content="width=device-width" />
   <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-  <meta name="generator" content={Astro.generator} />
   <title>{title}</title>
+  <ViewTransitions />
 </head>
 
-<body class="overflow-x-auto md:min-w-[1240px]">
+<body class="overflow-x-auto md:min-w-768px">
   <section data-univer-body class="transition-transform transform-duration-500">
-    <Navbar />
-
-    <main class="my-8 md:mt-30 md:mb-40 px-5 md:px-23 2xl:px-0">
-      <section class="max-w-screen-2xl m-auto">
-        <slot />
-      </section>
-    </main>
-
-    <slot name="append" />
+    <slot />
 
     <Footer />
   </section>
