--- a/src/pages/solutions.astro
+++ b/src/pages/solutions.astro
@@ -1,32 +1,47 @@
 ---
 import Layout from '@/layouts/Layout.astro'
-import Title from '@/components/Title/index.astro'
-import Paragraph from '@/components/Paragraph/index.astro'
-
-const solutions = [{
-  title: '以简洁明了的方式填写数据，提高效率和准确性',
-  desc: '实现类似于 Excel 的数据录入和展示功能，提供了内置的 API，包括在线填报、打印报送、实时预览和数据校验功能。此外，还可以通过自定义开发来满足业务需求，如批量导入导出 Excel、填报暂存、多个 sheet 填报和多级上报等功能。',
-  preview: '/images/pages/solutions/01.png'
-}, {
-  title: '提供 Excel 式报表设计，高效便捷满足数据分析和展示需求',
-  desc: '将 Univer 嵌入企业报表 CRM 平台，实现高度类似 Excel 的使用体验，兼容 Excel 数据格式，从而降低本地到线上的数据迁移工作量，并可复用业务系统原始 Excel 报表模板，提高工作效率。',
-  preview: '/images/pages/solutions/02.png'
-}, {
-  title: '实现表格文档协同编辑，提升团队协作效率',
-  desc: '可构建具备多人实时协同编辑功能的在线文档平台，支持单元格级别的操作精度，满足团队协作、协同编辑、数据同步、版本管理、历史查询等在线文档开发需求，提升团队协作效率。',
-  preview: '/images/pages/solutions/03.png'
-}]
+import Hero from '@/components/Hero/index.astro'
+import ResponsiveContainer from '@/components/ResponsiveContainer'
+import VerticalContent from '@/components/VerticalContent/index.astro'
 ---
 
-<Layout title="Univer">
-  <section class="grid gap-8 md:gap-30">
-    {solutions.map(item => (
-      <section class="grid gap-8">
-        <Title align="center">{item.title}</Title>
-        <Paragraph align="center">{item.desc}</Paragraph>
+<Layout title="应用场景 / Univer">
+  <Hero
+    title={['融合']}
+    desc="让 Univer 嵌入到企业业务流程，助力企业数字化升级"
+  />
 
-        <img src={item.preview} alt={item.title} class="w-full" />
-      </section>
-    ))}
-  </section>
+  <ResponsiveContainer>
+    <main class="py-28 grid gap-28">
+      <VerticalContent
+        title="业务填报，让用户操作习惯延续"
+        desc="实现类似于 Excel 的数据录入和展示功能，提供了内置的 API，包括在线填报、打印报送、实时预览和数据校验功能。此外，还可以通过自定义开发来满足业务需求，如批量导入导出 Excel、填报暂存、多个 sheet 填报和多级上报等功能。"
+        cover="/images/solutions/01.png"
+      />
+
+      <VerticalContent
+        title="BI 呈现，让用户自我完成逻辑展示"
+        desc="将 Univer 嵌入企业报表 CRM 平台，实现高度类似 Excel 的使用体验，兼容 Excel 数据格式，从而降低本地到线上的数据迁移工作量，并可复用业务系统原始 Excel 报表模板，提高工作效率。"
+        cover="/images/solutions/02.png"
+      />
+
+      <VerticalContent
+        title="实现表格文档协同编辑，提升团队协作效率"
+        desc="可构建具备多人实时协同编辑功能的在线文档平台，支持单元格级别的操作精度，满足团队协作、协同编辑、数据同步、版本管理、历史查询等在线文档开发需求，提升团队协作效率。"
+        cover="/images/solutions/03.png"
+      />
+
+      <VerticalContent
+        title="IM，在聊天中大家一起编辑文档"
+        desc="将 Univer 嵌入企业 IM 中，当大家对某个文档进行沟通协作的时候，可以直接将文件拖拽到聊天窗口中，Univer 将自动识别并展示在窗口中，大家可以根据沟通实时修改文档或填报数据。"
+        cover="/images/solutions/04.png"
+      />
+
+      <VerticalContent
+        title="邮件，让附件不占用你的空间"
+        desc="邮件系统嵌入 Univer 后，当用户插入附件后，对方收到邮件无需下载，即可进行查看编辑，并立即回复，并可保留文档历史版本，并记录修改点，方便大家了解前后文。"
+        cover="/images/solutions/05.png"
+      />
+    </main>
+  </ResponsiveContainer>
 </Layout>
