feat: change xmind to mindmap

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,7 @@ import Layout from '@/layouts/Layout.astro'
 import Hero from '@/components/Hero/index.astro'
 import ResponsiveContainer from '@/components/ResponsiveContainer'
 import HorizontalContent from '@/components/HorizontalContent/index.astro'
-import { SheetIcon, DocIcon, XmindIcon, SlideIcon } from '@/components/Icons'
+import { SheetIcon, DocIcon, MindmapIcon, SlideIcon } from '@/components/Icons'
 
 const advantages = [{
   img: '/images/index/01.png',
@@ -32,8 +32,8 @@ const apps = [{
   title: 'Doc',
   desc: '信息记录明确的电子文档'
 }, {
-  icon: XmindIcon,
-  title: 'Xmind',
+  icon: MindmapIcon,
+  title: 'Mindmap',
   desc: '分支结构强大的思维导图'
 }, {
   icon: SlideIcon,
