--- a/src/pages/products.astro
+++ b/src/pages/products.astro
@@ -4,7 +4,7 @@ import Hero from '@/components/Hero/index.astro'
 import ResponsiveContainer from '@/components/ResponsiveContainer'
 import VerticalContent from '@/components/VerticalContent/index.astro'
 import HorizontalContent from '@/components/HorizontalContent/index.astro'
-import { SheetIcon, DocIcon, XmindIcon, SlideIcon } from '@/components/Icons'
+import { SheetIcon, DocIcon, MindmapIcon, SlideIcon } from '@/components/Icons'
 ---
 
 <Layout title="了解 Univer / Univer">
@@ -49,8 +49,8 @@ import { SheetIcon, DocIcon, XmindIcon, SlideIcon } from '@/components/Icons'
       <HorizontalContent
         position="left"
         cover="/images/products/03.png"
-        prefix={XmindIcon}
-        title="Xmind"
+        prefix={MindmapIcon}
+        title="Mindmap"
         desc={[
           '专业强大的脑图工具，适用于学习、工作',
           '提供了丰富的功能和工具，满足你的不同需求',
