--- a/src/components/Hero/index.astro
+++ b/src/components/Hero/index.astro
@@ -28,13 +28,27 @@ const { title, desc } = Astro.props
     <p class="hidden md:block text-white text-5/8 text-center">{desc}</p>
 
     <div class="flex gap-8">
-      <button class="px-8 py-2 bg-white md:bg-transparent text-#35322b md:text-white rounded border-white border-2">
+      <button
+        id="contact-us"
+        class="px-8 py-2 bg-white md:bg-transparent text-#35322b md:text-white rounded border-white border-2"
+      >
         联系我们
       </button>
 
-      <button class="hidden md:inline-block px-8 py-2 text-#35322b bg-white rounded border-white border-2">
+      <button
+        class="hidden md:inline-block px-8 py-2 text-#35322b bg-white rounded border-white border-2"
+      >
         我要试用
       </button>
     </div>
   </section>
 </header>
+
+<script>
+document.getElementById('contact-us')?.addEventListener('click', () => {
+  window.scrollTo({
+    top: document.body.scrollHeight,
+    behavior: 'smooth'
+  })
+})  
+</script>
