--- a/src/pages/faq.astro
+++ b/src/pages/faq.astro
@@ -7,28 +7,26 @@ import Input from '@/components/Input'
 const list = [{
   category: '技术问题',
   items: [{
-    title: '在线导入导出 Excel 相关'
+    title: '如何添加自定义公式',
+    href: 'https://dream-num.github.io/LuckysheetDocs/zh/guide/FAQ.html#%E5%A6%82%E4%BD%95%E6%B7%BB%E5%8A%A0%E8%87%AA%E5%AE%9A%E4%B9%89%E5%85%AC%E5%BC%8F'
   }, {
-    title: '导出 PDF 时的常见问题'
+    title: '创建图表时候报错 Store.createChart',
+    href: 'https://dream-num.github.io/LuckysheetDocs/zh/guide/FAQ.html#%E5%88%9B%E5%BB%BA%E5%9B%BE%E8%A1%A8%E6%97%B6%E5%80%99%E6%8A%A5%E9%94%99store-createchart'
   }, {
-    title: '数据绑定相关问题'
+    title: 'dist 文件夹下为什么不能直接运行项目',
+    href: 'https://dream-num.github.io/LuckysheetDocs/zh/guide/FAQ.html#dist%E6%96%87%E4%BB%B6%E5%A4%B9%E4%B8%8B%E4%B8%BA%E4%BB%80%E4%B9%88%E4%B8%8D%E8%83%BD%E7%9B%B4%E6%8E%A5%E8%BF%90%E8%A1%8C%E9%A1%B9%E7%9B%AE'
   }, {
-    title: '与 JavaScript 框架集成'
+    title: '如何在 Vue/React 项目中使用 Univer',
+    href: 'https://dream-num.github.io/LuckysheetDocs/zh/guide/FAQ.html#%E5%A6%82%E4%BD%95%E5%9C%A8vue-react%E9%A1%B9%E7%9B%AE%E4%B8%AD%E4%BD%BF%E7%94%A8luckysheet'
   }, {
-    title: 'Univer 使用常见问题（FAQ）汇总'
-  }]
-}, {
-  category: '售后服务问题',
-  items: [{
-    title: '产品授权相关'
+    title: 'Universheetfile 中的 data 和 celldata 有什么区别',
+    href: 'https://dream-num.github.io/LuckysheetDocs/zh/guide/FAQ.html#luckysheetfile%E4%B8%AD%E7%9A%84data%E5%92%8Ccelldata%E6%9C%89%E4%BB%80%E4%B9%88%E5%8C%BA%E5%88%AB'
   }, {
-    title: '源码授权相关'
+    title: '如何监听单元格 hover 或者点击事件？cellRenderAfter 如何实时监听变化',
+    href: 'https://dream-num.github.io/LuckysheetDocs/zh/guide/FAQ.html#%E5%A6%82%E4%BD%95%E7%9B%91%E5%90%AC%E5%8D%95%E5%85%83%E6%A0%BChover%E6%88%96%E8%80%85%E7%82%B9%E5%87%BB%E4%BA%8B%E4%BB%B6-cellrenderafter%E5%A6%82%E4%BD%95%E5%AE%9E%E6%97%B6%E7%9B%91%E5%90%AC%E5%8F%98%E5%8C%96'
   }, {
-    title: '历史版本功能汇总'
-  }, {
-    title: '会员服务相关'
-  }, {
-    title: '新用户活动政策'
+    title: 'Univer 使用教程（FAQ）汇总',
+    href: 'https://dream-num.github.io/LuckysheetDocs/zh/guide/resource.html'
   }]
 }]
 ---
@@ -56,9 +54,9 @@ const list = [{
         <section class="grid gap-10">
           <h2 class="font-700 md:font-400 text-#35322b text-6.4">{category}</h2>
           <ul class="grid">
-            {items.map(({ title }) => (
+            {items.map(({ title, href }) => (
               <li class="text-#ffbd37 text-4.8 border-b-1 border-#e5e5e5">
-                <a class="py-4 block">{title} →</a>
+                <a class="py-4 inline-block" href={href} target="_blank">{title} →</a>
               </li>
             ))}
           </ul>
