--- a/src/components/Footer/index.astro
+++ b/src/components/Footer/index.astro
@@ -15,10 +15,13 @@ import ResponsiveContainer from '@/components/ResponsiveContainer'
         <img class="w-full md:h-64" src="/images/qrcode.png" alt="qrcode" />
       </div>
 
-      <div class="col-span-8 row-span-2 md:col-span-3 md:row-span-1 grid md:grid-cols-3 gap-2 md:gap-28">
+      <div class="col-span-8 row-span-2 md:col-span-3 md:row-span-1 grid md:grid-cols-3 gap-2 lg:gap-28">
         <div class="flex flex-col justify-end gap-6">
           <span>上海梦数科技有限公司</span>
-          <span>地址：上海市浦东新区上海证券大厦</span>
+          <span>
+            <span class="block md:block lg:block xl:inline-block text-nowrap">地址：上海市浦东新区上海</span>
+            <span class="text-nowrap">证券大厦</span>
+          </span>
         </div>
 
         <div class="flex flex-col justify-end gap-6">
