--- a/src/pages/products.astro
+++ b/src/pages/products.astro
@@ -10,7 +10,7 @@ import { SheetIcon, DocIcon, MindmapIcon, SlideIcon } from '@/components/Icons'
 <Layout title="了解 Univer / Univer">
   <Hero
     title={['Univer 是什么']}
-    desc="Univer 包罗万象，抽象出了效率工具的本质为表格、文档、画布，能够衍生出各种各样的效率工具产品,涵盖大型编辑器项目架构设计、高性能排版渲染引擎、高性能公式计算引擎、实时协同编辑、AIGC等技术主题。体现到具体形态上有sheet、doc、slide、PDF等，最大特点插件化，让大家业务线上化，数据产业化成为立即实现的途径"
+    desc="Univer 包罗万象，抽象出了效率工具的本质为表格、文档、画布，能够衍生出各种各样的效率工具产品，涵盖大型编辑器项目架构设计、高性能排版渲染引擎、高性能公式计算引擎、实时协同编辑、AIGC 等技术主题。体现到具体形态上有 Sheet、Doc、Slide、PDF 等，插件化，业务线上化，数据产业化。"
   />
 
   <ResponsiveContainer>
