--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,12 +7,12 @@ import { SheetIcon, DocIcon, MindmapIcon, SlideIcon } from '@/components/Icons'
 
 const advantages = [{
   img: '/images/index/01.png',
-  title: '开源 Open',
+  title: 'Open-source',
   desc: '开源协议，畅享最新技术'
 }, {
   img: '/images/index/02.png',
   title: '插件化',
-  desc: '即插即用，按需加载，灵活多样；嵌入任何业务流程节点，提供数据流转效率'
+  desc: '即插即用，按需加载，灵活多样；嵌入任何业务流程节点，加速数据流转效率'
 }, {
   img: '/images/index/03.png',
   title: '纯前端',
@@ -20,25 +20,25 @@ const advantages = [{
 }, {
   img: '/images/index/04.png',
   title: '功能全',
-  desc: '兼容办公套件基础功能，增强导入、导出、打印、公式性能；协同办公更让效率提升'
+  desc: '兼容办公套件基础功能，增强导入、导出、打印、公式性能，协同办公更高效'
 }]
 
 const apps = [{
   icon: SheetIcon,
   title: 'Sheet',
-  desc: '直观强大流行的电子表格'
+  desc: '电子表格'
 }, {
   icon: DocIcon,
   title: 'Doc',
-  desc: '信息记录明确的电子文档'
+  desc: '电子文档'
 }, {
   icon: MindmapIcon,
   title: 'Mindmap',
-  desc: '分支结构强大的思维导图'
+  desc: '思维导图'
 }, {
   icon: SlideIcon,
   title: 'Slide',
-  desc: '多样自由的文稿演示工具'
+  desc: '文稿演示工具'
 }]
 ---
 
@@ -73,7 +73,7 @@ const apps = [{
         cover="/images/index/06.png"
         title="链接"
         sub="插件化，嵌入式"
-        desc="让最接近您业务实际细节的人员能够自定义应用程序，以加快工作完成速度。"
+        desc="让业务人员能够自定义应用程序，以加快工作完成速度。"
       />
 
 
@@ -81,16 +81,16 @@ const apps = [{
         position="left"
         title="融合"
         sub="完美兼容，无需改变工作习惯"
-        desc="Univer 包含当前市面上关键的办公程序，无需安装办公软件，只需在浏览器中打开，即包含所有程序。"
+        desc="Univer 包含当前主流办公软件，可直接在浏览器中打开使用，无需下载。"
       >
-        <div class="w-full md:w-180 grid gap-4 md:gap-8 grid-cols-2 grid-rows-2">
+        <div class="w-full md:w-120 lg:w-140 xl:w-180 grid gap-4 md:gap-8 grid-cols-2 grid-rows-2">
           {apps.map(item => (
-            <div class="grid md:grid-cols-4 items-center gap-4 p-5 rounded shadow-[0_4px_10px_0_rgba(0,0,0,0.1)]">
+            <div class="grid md:grid-cols-3 xl:grid-cols-4 items-center gap-4 p-5 rounded shadow-[0_4px_10px_0_rgba(0,0,0,0.1)]">
               <div class="flex justify-center md:block md:col-span-1">
                 <item.icon />
               </div>
 
-              <div class="text-center md:text-left md:col-span-3 grid gap-4 md:gap-2">
+              <div class="text-center md:pl-2 md:text-left md:col-span-2 xl:col-span-3 grid gap-4 md:gap-2">
                 <strong class="text-4.8 text-#35322b">{item.title}</strong>
                 <p class="text-3.6 text-#999999">{item.desc}</p>
               </div>
