fix: font size,pdf

--- a/src/components/HorizontalContent/index.astro
+++ b/src/components/HorizontalContent/index.astro
@@ -28,7 +28,7 @@ const { position, cover, prefix, title, sub, desc } = Astro.props
       sub ? 'h-32' : 'h-20'
     ]}
   >
-    <h2 class="flex items-center gap-4 text-8/12 md:text-12/18 font-700 text-#35322b mx-auto md:mx-0">
+    <h2 class="flex items-center gap-4 text-8/12 xl:text-12/18 font-700 text-#35322b mx-auto md:mx-0">
       {prefix && (<Astro.props.prefix />)}
       {title}
     </h2>
