--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,7 @@ import Layout from '@/layouts/Layout.astro'
 import Hero from '@/components/Hero/index.astro'
 import ResponsiveContainer from '@/components/ResponsiveContainer'
 import HorizontalContent from '@/components/HorizontalContent/index.astro'
-import { SheetIcon, DocIcon, MindmapIcon, SlideIcon } from '@/components/Icons'
+import { SheetIcon, DocIcon, MindmapIcon, SlideIcon, PDFIcon } from '@/components/Icons'
 
 const advantages = [{
   img: '/images/index/01.png',
@@ -32,9 +32,9 @@ const apps = [{
   title: 'Doc',
   desc: '电子文档'
 }, {
-  icon: MindmapIcon,
-  title: 'Mindmap',
-  desc: '思维导图'
+  icon: PDFIcon,
+  title: 'PDF',
+  desc: 'PDF 文档'
 }, {
   icon: SlideIcon,
   title: 'Slide',
