--- a/src/components/VerticalContent/index.astro
+++ b/src/components/VerticalContent/index.astro
@@ -9,7 +9,7 @@ const { title, desc, cover } = Astro.props
 ---
 
 <section class="grid gap-8 text-center">
-  <h2 class="md:w-70% mx-auto text-8/12 md:text-12/18 font-700 text-#35322b">{title}</h2>
+  <h2 class="md:w-70% mx-auto text-8/12 xl:text-12/18 font-700 text-#35322b">{title}</h2>
 
   <p class="md:w-70% mx-auto text-5/8 text-#999999">{desc}</p>
 
