--- a/src/components/Footer/index.astro
+++ b/src/components/Footer/index.astro
@@ -12,7 +12,7 @@ import ResponsiveContainer from '@/components/ResponsiveContainer'
       </div>
 
       <div class="col-span-4 row-span-3 self-end justify-self-end md:col-span-1 md:row-span-2">
-        <img class="w-full md:h-64" src="/images/qrcode.png" alt="qrcode" />
+        <img class="w-full md:h-64" src="https://gcore.jsdelivr.net/gh/dream-num/official-website@gh-pages/images/qrcode.png" alt="qrcode" />
       </div>
 
       <div class="col-span-8 row-span-2 md:col-span-3 md:row-span-1 grid md:grid-cols-3 gap-2 lg:gap-28">
