--- a/src/components/Hero/index.astro
+++ b/src/components/Hero/index.astro
@@ -13,7 +13,7 @@ const { title, desc, hideButton = false, showDesc = false } = Astro.props
 
 <Navbar client:load transitionWithParent />
 
-<header id="univer-hero" class="relative bg-[url(/images/hero.jpg)] bg-cover bg-center md:h-160 2xl:h-200" class:list={[showDesc ? "h-140" : "h-80"]}>
+<header id="univer-hero" class="relative bg-[url(https://gcore.jsdelivr.net/gh/dream-num/official-website@gh-pages/images/hero.jpg)] bg-cover bg-center md:h-160 2xl:h-200" class:list={[showDesc ? "h-140" : "h-80"]}>
   <div class="absolute w-full h-full bg-black opacity-40" />
 
   <section class="absolute left-10% w-80% h-full flex flex-col justify-center items-center gap-8">
