--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,19 +6,19 @@ import HorizontalContent from '@/components/HorizontalContent/index.astro'
 import { SheetIcon, DocIcon, MindmapIcon, SlideIcon, PDFIcon } from '@/components/Icons'
 
 const advantages = [{
-  img: '/images/index/01.png',
+  img: 'https://gcore.jsdelivr.net/gh/dream-num/official-website@gh-pages/images/index/01.png',
   title: 'Open-source',
   desc: '开源协议，畅享最新技术'
 }, {
-  img: '/images/index/02.png',
+  img: 'https://gcore.jsdelivr.net/gh/dream-num/official-website@gh-pages/images/index/02.png',
   title: '插件化',
   desc: '即插即用，按需加载，灵活多样；嵌入任何业务流程节点，加速数据流转效率'
 }, {
-  img: '/images/index/03.png',
+  img: 'https://gcore.jsdelivr.net/gh/dream-num/official-website@gh-pages/images/index/03.png',
   title: '纯前端',
   desc: '高性能、跨平台，支持主流前端框架'
 }, {
-  img: '/images/index/04.png',
+  img: 'https://gcore.jsdelivr.net/gh/dream-num/official-website@gh-pages/images/index/04.png',
   title: '功能全',
   desc: '兼容办公套件基础功能，增强导入、导出、打印、公式性能，协同办公更高效'
 }]
@@ -62,7 +62,7 @@ const apps = [{
 
       <HorizontalContent
         position="left"
-        cover="/images/index/05.png"
+        cover="https://gcore.jsdelivr.net/gh/dream-num/official-website@gh-pages/images/index/05.png"
         title="高效"
         sub="助力企业数字产业化，提高数据价值"
         desc="Univer 优化现有流程，摒弃传统的低代码模式，而不是创造和增加流程，真正为企业赋能。"
@@ -70,7 +70,7 @@ const apps = [{
 
       <HorizontalContent
         position="right"
-        cover="/images/index/06.png"
+        cover="https://gcore.jsdelivr.net/gh/dream-num/official-website@gh-pages/images/index/06.png"
         title="链接"
         sub="插件化，嵌入式"
         desc="让业务人员能够自定义应用程序，以加快工作完成速度。"
