--- a/src/pages/products.astro
+++ b/src/pages/products.astro
@@ -22,7 +22,7 @@ import { SheetIcon, DocIcon, MindmapIcon, SlideIcon, PDFIcon } from '@/component
 
       <HorizontalContent
         position="left"
-        cover="/images/products/01.png"
+        cover="https://gcore.jsdelivr.net/gh/dream-num/official-website@gh-pages/images/products/01.png"
         prefix={SheetIcon}
         title="Sheet"
         desc={[
@@ -35,7 +35,7 @@ import { SheetIcon, DocIcon, MindmapIcon, SlideIcon, PDFIcon } from '@/component
 
       <HorizontalContent
         position="right"
-        cover="/images/products/02.png"
+        cover="https://gcore.jsdelivr.net/gh/dream-num/official-website@gh-pages/images/products/02.png"
         prefix={DocIcon}
         title="Doc"
         desc={[
@@ -47,7 +47,7 @@ import { SheetIcon, DocIcon, MindmapIcon, SlideIcon, PDFIcon } from '@/component
 
       <HorizontalContent
         position="left"
-        cover="/images/products/03.png"
+        cover="https://gcore.jsdelivr.net/gh/dream-num/official-website@gh-pages/images/products/03.png"
         prefix={PDFIcon}
         title="PDF"
         desc={[
@@ -62,7 +62,7 @@ import { SheetIcon, DocIcon, MindmapIcon, SlideIcon, PDFIcon } from '@/component
 
       <HorizontalContent
         position="right"
-        cover="/images/products/04.png"
+        cover="https://gcore.jsdelivr.net/gh/dream-num/official-website@gh-pages/images/products/04.png"
         prefix={SlideIcon}
         title="Slide"
         desc={[
