--- a/src/pages/talent.astro
+++ b/src/pages/talent.astro
@@ -9,38 +9,38 @@ import { type ITab } from '@/components/PCTabs'
 import CompanyLogo from '@/components/CompanyLogo'
 
 const advantages = [{
-  img: '/images/talent/01.png',
+  img: 'https://gcore.jsdelivr.net/gh/dream-num/official-website@gh-pages/images/talent/01.png',
   desc: '具有竞争力的薪资和福利待遇'
 }, {
-  img: '/images/talent/02.png',
+  img: 'https://gcore.jsdelivr.net/gh/dream-num/official-website@gh-pages/images/talent/02.png',
   desc: '提供顶级硬件设备，让你全心投入创新，技术氛围浓厚'
 }, {
-  img: '/images/talent/03.png',
+  img: 'https://gcore.jsdelivr.net/gh/dream-num/official-website@gh-pages/images/talent/03.png',
   desc: '期权激励计划，和公司一起成长'
 }, {
-  img: '/images/talent/04.png',
+  img: 'https://gcore.jsdelivr.net/gh/dream-num/official-website@gh-pages/images/talent/04.png',
   desc: '弹性工作时间和远程工作的机会'
 }]
 const company = [{
-  img: '/images/talent/dingtalk-logo.png',
+  img: 'https://gcore.jsdelivr.net/gh/dream-num/official-website@gh-pages/images/talent/dingtalk-logo.png',
 }, {
-  img: '/images/talent/feishu-logo.png',
+  img: 'https://gcore.jsdelivr.net/gh/dream-num/official-website@gh-pages/images/talent/feishu-logo.png',
 }, {
-  img: '/images/talent/tencent-logo.png',
+  img: 'https://gcore.jsdelivr.net/gh/dream-num/official-website@gh-pages/images/talent/tencent-logo.png',
 }, {
-  img: '/images/talent/shimo-logo.png',
+  img: 'https://gcore.jsdelivr.net/gh/dream-num/official-website@gh-pages/images/talent/shimo-logo.png',
 },{
-  img: '/images/talent/wps-logo.png',
+  img: 'https://gcore.jsdelivr.net/gh/dream-num/official-website@gh-pages/images/talent/wps-logo.png',
 },
 ]
 
 export const tabs: ITab[] = [
-    { label: '前端工程师',name:'frontend',location:'上海', content:["参与 Univer 架构设计，负责核心模块的设计和研发，攻克技术难关；","实现 Univer 核心功能，提供优秀的产品使用体验；","以开源的方式构建产品，和开发者社区互动，倾听用户呼声，不断提升 Univer 的功能和二次开发体验。"],requirements:["本科及以上学历，扎实的前端开发经验，熟练掌握前端常用语言和库，包括但不限于TypeScript / React / webpack / Vite 等；","具备团队合作精神和良好的沟通能力，能够和其他团队成员保持紧密的合作；具备较好的逻辑性、自驱力和责任心，能够独立负责研发任务。"],addition:["有编辑器项目的开发经验，在协同编辑、排版、图形渲染、公式引擎等任一领域有深入的探索；","熟悉 Node.js 等后端开发环境；","热爱开源，参与过开源项目的研发，是社区的活跃成员。"],coverImage:'/images/talent/talent-frontend.png'
+    { label: '前端工程师',name:'frontend',location:'上海', content:["参与 Univer 架构设计，负责核心模块的设计和研发，攻克技术难关；","实现 Univer 核心功能，提供优秀的产品使用体验；","以开源的方式构建产品，和开发者社区互动，倾听用户呼声，不断提升 Univer 的功能和二次开发体验。"],requirements:["本科及以上学历，扎实的前端开发经验，熟练掌握前端常用语言和库，包括但不限于TypeScript / React / webpack / Vite 等；","具备团队合作精神和良好的沟通能力，能够和其他团队成员保持紧密的合作；具备较好的逻辑性、自驱力和责任心，能够独立负责研发任务。"],addition:["有编辑器项目的开发经验，在协同编辑、排版、图形渲染、公式引擎等任一领域有深入的探索；","熟悉 Node.js 等后端开发环境；","热爱开源，参与过开源项目的研发，是社区的活跃成员。"],coverImage:'https://gcore.jsdelivr.net/gh/dream-num/official-website@gh-pages/images/talent/talent-frontend.png'
     },
-    { label: '后端工程师',name:'backend', location:'深圳',content: ["负责Univer后端系统架构设计、优化和演进；","负责高质量的设计和编码，提供稳定的系统服务；","承担重点、难点的技术攻坚，包括协同、SSC、AIGC；","主要语言为Golang/Python/Java"],requirements:["本科及以上学历，熟练掌握 Go 或 Java 编程语言，具有扎实的计算机基础知识；","熟悉微服务架构，具备实际项目开发和维护经验；","对分布式系统、高并发、高可用等技术有深入理解；","具备团队合作精神和良好的沟通能力，较好的逻辑性、自驱力和责任心。"],addition:["有协同算法的开发经验；","参与过开源项目的研发，是技术社区的活跃成员；","有互联网大厂工作经历。"],coverImage:'/images/talent/talent-backend.png' },
-    { label: '市场经理',name:'market', location:'上海',content: ["拜访已有客户，倾听客户诉求，将用户的需求转化成产品路线；","以开源的方式构建产品，和开发者社区互动，倾听用户呼声，不断提升产品的用户体验；","discord 等国外社区维护。"],requirements:["本科及以上学历，擅长B端互联网产品设计；","能完成中型 Feature 的需求分析、设计、落地、复盘和迭代；","至少有一个领域完整的用户模型，对用户、对需求有较为成熟的认知；","有深度思考和复盘的习惯，具备较好的自驱力和责任心、优秀的项目推进和落地的执行力。"],addition:["有工具类或 2B 类产品管理经验；","可以使用英文作为工作语言；","有互联网大厂工作经验。"],coverImage:'/images/talent/talent-market.png' },
+    { label: '后端工程师',name:'backend', location:'深圳',content: ["负责Univer后端系统架构设计、优化和演进；","负责高质量的设计和编码，提供稳定的系统服务；","承担重点、难点的技术攻坚，包括协同、SSC、AIGC；","主要语言为Golang/Python/Java"],requirements:["本科及以上学历，熟练掌握 Go 或 Java 编程语言，具有扎实的计算机基础知识；","熟悉微服务架构，具备实际项目开发和维护经验；","对分布式系统、高并发、高可用等技术有深入理解；","具备团队合作精神和良好的沟通能力，较好的逻辑性、自驱力和责任心。"],addition:["有协同算法的开发经验；","参与过开源项目的研发，是技术社区的活跃成员；","有互联网大厂工作经历。"],coverImage:'https://gcore.jsdelivr.net/gh/dream-num/official-website@gh-pages/images/talent/talent-backend.png' },
+    { label: '市场经理',name:'market', location:'上海',content: ["拜访已有客户，倾听客户诉求，将用户的需求转化成产品路线；","以开源的方式构建产品，和开发者社区互动，倾听用户呼声，不断提升产品的用户体验；","discord 等国外社区维护。"],requirements:["本科及以上学历，擅长B端互联网产品设计；","能完成中型 Feature 的需求分析、设计、落地、复盘和迭代；","至少有一个领域完整的用户模型，对用户、对需求有较为成熟的认知；","有深度思考和复盘的习惯，具备较好的自驱力和责任心、优秀的项目推进和落地的执行力。"],addition:["有工具类或 2B 类产品管理经验；","可以使用英文作为工作语言；","有互联网大厂工作经验。"],coverImage:'https://gcore.jsdelivr.net/gh/dream-num/official-website@gh-pages/images/talent/talent-market.png' },
     { label: '市场营销',name:'sale' ,location:'上海', content:['负责公司品牌定位、推广及策略制定，维护企业品牌形象。','结合公司发展战略，制定并实施长期市场营销策略，提升品牌知名度。','管理公司自媒体（如官网、微博、微信等）及开源社区，负责其创意、更新、运营及推广。','利用各类媒体资源，建立长效沟通机制，并负责媒体联络及公司宣传报道。','分析客户需求，制定精准推广策略；根据业务需求，规划推广活动并确保其顺利开展。','监测市场营销策略的执行效果，总结经验，提供优化建议。'],requirements:["本科及以上学历，新闻、传媒、广告等相关专业。","掌握广告、公关、企业形象策划、品牌视觉传达策划等，熟悉商业品牌建设；5年以上相关工作经验。","有强文案策划及撰写能力，精通office使用。","具有丰富的公关传播及媒体维护经验，能独立完成工作并建立合作关系。","在软件行业（尤其是 SaaS）或大型 ToB 业务为主导的企业有5年以上市场工作经验","具有分析、沟通协调、谈判以及执行力。","性格开朗，具有强烈的责任感和团队管理能力。"]
-,addition:["互联网大厂或大型软件企业（微软、用友、泛微、葡萄城、致远、wps、帆软）工作经验","可以使用英文作为工作语言，有海外市场经验","有相关渠道及行业资源"],coverImage:'/images/talent/talent-sale.png' },
+,addition:["互联网大厂或大型软件企业（微软、用友、泛微、葡萄城、致远、wps、帆软）工作经验","可以使用英文作为工作语言，有海外市场经验","有相关渠道及行业资源"],coverImage:'https://gcore.jsdelivr.net/gh/dream-num/official-website@gh-pages/images/talent/talent-sale.png' },
   ];
 
 const bottom = {
