--- a/src/components/Footer/index.astro
+++ b/src/components/Footer/index.astro
@@ -47,7 +47,10 @@ import ResponsiveContainer from '@/components/ResponsiveContainer'
   <section class="h-70 flex justify-center items-center">
     <p class="text-#999999 flex md:block flex-col gap-4 items-center">
       <span class="md:mr-2">Copyright &copy; 2021-2023 Mengshu. All Rights Reserved.</span>
-      <span class="md:mr-8">上海梦数科技 版权所有</span>
+      <span class="md:mr-2">上海梦数科技 版权所有</span>
+      <span class="md:mr-2">
+        <a href="https://beian.miit.gov.cn/" target="_blank">沪ICP备2023028878号</a>
+      </span>
       <span>
         <a>服务协议</a> | <a>隐私政策</a>
       </span>
