--- a/packages/docs/src/layouts/Layout.astro
+++ b/packages/docs/src/layouts/Layout.astro
@@ -1,4 +1,7 @@
 ---
+import Header from '@/components/Header/index.astro'
+import Footer from '@/components/Footer/index.astro'
+
 interface Props {
 	title: string
 }
@@ -17,12 +20,17 @@ const { title } = Astro.props
 		<title>{title}</title>
 	</head>
 	<body>
+		<Header />
 		<slot />
+		<Footer />
 	</body>
 </html>
 
 <style is:global>
 :root {
+	font-family: Inter, -apple-system, BlinkMacSystemFont, "PingFang SC", "Hiragino Sans GB", "noto sans", "Microsoft YaHei", "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font-size: 16px;
 	-webkit-font-smoothing: antialiased;
+	background: #E4F4FE33;
 }
 </style>
